filter out  rooms available to be booked if dates overlap